--- a/nextjs-14/james-app/package.json
+++ b/nextjs-14/james-app/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^17.0.0 || ^18.0.0",
     "redux": "^5.0.1",
     "redux-actions": "3.0.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "nookies":"2.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
